# SenseClean

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  install.py  package-lock.json  pyproject.toml  repomix-senseclean.xml  requirements.txt  sensevision.db-journal
alembic/: env.py
alembic/versions/: 6ede8b83ddfd_create_initial_tables.py
app/: database.py  main.py
app/api/: auth.py  detection.py  device.py  video.py
app/core/: __init__.py  config.py  geometry.py  security.py
app/models/: __init__.py  detection.py  device.py  user.py  video.py
app/repositories/: device.py  video.py
app/schemas/: __init__.py  detection.py  device.py  video.py
app/services/: file_service.py  live_manager.py  report_service.py  task_manager.py  video_executor.py
app/vision/: __init__.py  analytics.py  interfaces.py  pipeline.py  tracker.py
app/vision/detectors/: yolo_detector.py
app/vision/trackers/: yolo_tracker.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Auth.tsx  Dashboard.tsx  DeviceList.tsx  VideoAnalysis.tsx
frontend/src/lib/: api.ts
