[project]
name = "sensevisionClean"
version = "0.1.0"
description = ""
authors = [
    {name = "Yankarlos Dias e Santos",email = "yanzeradev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.42.0,<0.43.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "ultralytics (>=8.4.23,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
